--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,8 @@ header{
 }
 #openSearch{
     width:180px;
+    margin: auto;
+    margin-top:15px;
 }
 ::placeholder { 
     color: white !important;
