--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 :root{
-    --main-color:#272b30
+    --main-color:#272b30;
+    --second-color:rgb(52, 78, 194);
+    scroll-behavior: auto !important;
 }
 body{
     background-color:var(--main-color);
@@ -120,4 +122,18 @@ header{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: yellow; 
+}
+
+goUp{
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--second-color);
+    transition: all 0.5s;
+    &:hover{
+        background-color: #ffcc00;
+        color: var(--main-color);
+    }
 }
